defect NYCCHKBK-10629 - Fix alignment for MWBE columns

--- a/source/webapp/sites/all/themes/omega/alpha/css/alpha-reset.css
+++ b/source/webapp/sites/all/themes/omega/alpha/css/alpha-reset.css
@@ -125,3 +125,8 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+td.text.width-90-percent-center div {
+  width: 90%;
+  text-align: center;
+}
